# typix

./: Cargo.toml  README.md
assets/configs/layouts/: en.json  ru.json
assets/configs/locales/: en.json  ru.json
src/: main.rs
src/configs/: layout.rs  locale.rs  mod.rs  settings.rs  theme.rs
src/entity/: fps.rs  key_drop.rs  label.rs  messages.rs  mod.rs
src/states/: drop_game_state.rs  lvl_select_state.rs  mm_state.rs  mod.rs  settings_state.rs
src/utils/: constants.rs  mod.rs  state.rs  states.rs
