[package]
name = "typix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
macroquad="0.3.6"
egui-macroquad="0.9.0"
egui="0.17.0"
dirs="4.0.0"
serde_json="1.0"
serde={version="1.0", features=["derive"]}
serde_derive="1.0"
include_dir="0.7.2"
